# rpi-mske

./: CMakeLists.txt  README
doc/: boot.txt
include/common/: defs.h  device.h  peripherals.h
include/led/: led.h
include/os/: os_status.h  semaphore.h  task.h
include/timer/: timer.h
kernel/: CMakeLists.txt
kernel/include/arch/arm/: barrier.h  cpuopts.h  processor.h
kernel/include/common/: panic.h
kernel/include/irq/: irq.h
kernel/include/mm/: mm.h
kernel/include/os/: events.h  pipe.h  queue.h  task.h
kernel/src/: kernel.ld
kernel/src/common/: device.c
kernel/src/exceptions/: exceptions.c
kernel/src/init/: boot.s  kernel.c
kernel/src/klibc/src/: printk.c  putc.c
kernel/src/led/: led.c
kernel/src/mm/: startup_pagedir.c
kernel/src/os/: pipe.c  semaphore.c  task.c
kernel/src/timer/: arm_timer.c  timer.c
kernel/src/uart/: uart.c
src/: CMakeLists.txt  kernel.ld
src/arch/arm/: barrier.h  cpuopts.h  processor.c  processor.h
src/common/: delay.h  device.c  device.h  io.h  panic.c  peripherals.h  types.h
src/exceptions/: exceptions.c  exceptions.h
src/gpio/: gpio.c  gpio.h
src/init/: atags.c  atags.h  boot.s  entry.S  kernel.c  meta.h
src/irq/: irq.c  irq.h
src/klibc/include/: types.h
src/klibc/src/: putc.c  vprintk.c
src/led/: led.c
src/os/: queue.c  task.c
src/timer/: arm_timer.c  arm_timer.h
src/uart/: uart.c  uart.h
toolchain/: toolchain-arm-none-eabi-rpi.cmake
tools/: create_sdcard.sh
